--- a/.github/workflows/main_azurewebapp02.yml
+++ b/.github/workflows/main_azurewebapp02.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy WAR app to Azure Web App - AzureWebApp02
+name: Build and deploy JAR app to Azure Web App - AzureWebApp02
 
 on:
   push:
@@ -29,7 +29,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.war'
+          path: '${{ github.workspace }}/target/*.jar'
 
   deploy:
     runs-on: windows-latest
@@ -49,9 +49,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_20832189D74F44D3B4B8FB61EBD07F82 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_1F256F8F669843FFA8CDDA665FBFE269 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_ADF2FC9127884C1AA02C42569FEEF132 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_097DEBB1D8654B67A47248F0DE51EB2C }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_7969F53CF19F4BE8875D4A7C6CDD1036 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_469FD081609646E89AC7EA0F5288099C }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -59,5 +59,5 @@ jobs:
         with:
           app-name: 'AzureWebApp02'
           slot-name: 'Production'
-          package: '*.war'
+          package: '*.jar'
           
